fix: correct CDN script URLs in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
   <!-- Link to the main stylesheet -->
   <link rel="stylesheet" href="css/style.css">
   <!-- Include Three.js from CDN -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r141/three.min.js" defer></script>
+  <script src="https://unpkg.com/three@0.154.0/build/three.min.js"></script>
   <!-- Include NippleJS for virtual joystick -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/nipplejs/0.9.0/nipplejs.min.js" defer></script>
+  <script src="https://unpkg.com/nipplejs@0.10.1/dist/nipplejs.min.js"></script>
 </head>
 <body>
   <!-- Container for virtual joystick -->
