--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
   <title>3D Solar System Explorer</title>
   <!-- Link to the main stylesheet -->
   <link rel="stylesheet" href="css/style.css">
-  <!-- Include Three.js from CDN -->
-  <script src="https://unpkg.com/three@0.154.0/build/three.min.js"></script>
+  <!-- Include Three.js from CDNJS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r154/three.min.js"></script>
   <!-- Include NippleJS for virtual joystick -->
-  <script src="https://unpkg.com/nipplejs@0.10.1/dist/nipplejs.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/nipplejs/0.9.0/nipplejs.min.js"></script>
 </head>
 <body>
   <!-- Container for virtual joystick -->
